@@ -2,6 +2,8 @@
 	- fixup fwd_ancil test typos.
 	- Fix for newegg lameness : ok for qtype=A, but lame for others.
 	- fixup unit test for infra cache, test lame merging.
+	- porting to mingw, bind, listen, getsockopt and setsockopt error
+	  handling.
 
 24 June 2008: Wouter
 	- removed testcode/checklocks from production code compilation path.
